--- a/FrontEnd/templates/FrontEnd/professional_field_section/professional_field_section.html
+++ b/FrontEnd/templates/FrontEnd/professional_field_section/professional_field_section.html
@@ -4,9 +4,9 @@
         <section class="interduce">
             <h2 class="title text-center">專業領域小組</h2>
             <div class="row" style="height:50vh">
-                <a href="{% url 'members_intro' %}" class="col-12 col-sm-6 bg-cover h-100 convener"
-                    style="background-image:url({% static 'img/index/host.jpg' %})">
-                    <h3 class="professional-title" style="color:black" >召集人/副召集人</h3>
+                <a href="{% url 'thesingle' 'Group' 1 %}" class="col-12 col-sm-6 bg-cover h-100 convener"
+                    style="background-image:url({% static 'img/index/FormerUniverse.jpg' %})">
+                    <h3 class="professional-title" style="color:rgb(255, 255, 255)" >元宇宙 最新科技</h3>
                 </a>
                 <div class="col-12 col-sm-6">
                     <div class="row" style="height:50vh">
@@ -30,7 +30,7 @@
                 </div>
             </div>
         </section>
-        <section class="new-tech">
+        <!--section class="new-tech">
             <h2 class="title text-center">元宇宙 最新科技</h2>
             <div class="text-center">
             <a href="{% url 'thesingle' 'Group' 1 %}">
@@ -41,6 +41,6 @@
             <h4 class="text-right">
                 <a href="{% url 'thesingle' 'Group' 1 %}" class="text-dark" style="line-height: 5rem; margin-right: 15%;"> > 快速了解他們！</a>
             </h4>
-        </section>
+        </section-->
     </div>
 </section>
