--- a/FrontEnd/templates/FrontEnd/base/footer.html
+++ b/FrontEnd/templates/FrontEnd/base/footer.html
@@ -7,7 +7,6 @@
                     <ul class="list-unstyled">
                         <li>單位名稱：創意工場</li>
                         <li> 總機號碼：<a href="tel:+05-5342601">05-5342601</a>&emsp;&emsp;分機號碼：6011、6009、6005</li>
-                        <li>單位網址：<a href="http://www.idf.tw/">http://www.idf.tw/</a> </li>
                         <li ></li>聯絡電郵：<a href="cif@yuntech.edu.tw">cif@yuntech.edu.tw</a></li>
                         <li>服務時間：週一至週五 09:00 - 18:00 (不含例假日)</li>
                     </ul>
@@ -20,7 +19,7 @@
                     </ul>
                 </div>
                 <div class="col-12 text-right">
-                    @自造者 2022
+                    ©自造者 2022
                 </div>
             </div>
         </div>
