--- a/FrontEnd/templates/FrontEnd/news_list/news_list.html
+++ b/FrontEnd/templates/FrontEnd/news_list/news_list.html
@@ -18,16 +18,16 @@
     <div class="title-1"><img src="../../../../static/img/news-list/img.png">所有公告</div>
 
     <div class="rightspace">
-        <div class="textimg">        
+        <div class="color-1">        
             <span class="fa-solid fa-wrench "></span>
             <p class="content-1" @click="changeType('最新消息')">最新消息</p>
             
         </div>
-        <div class="textimg">   
+        <div class="color-2">   
             <span class="fa-solid fa-gavel"></span>
             <p class="content-1" @click="changeType('學生活動')">學生活動</p>
         </div>
-        <div class="textimg">   
+        <div class="color-3">   
             <span class="fa-solid fa-hammer"></span>
             <p class="content-1" @click="changeType('學術動態')">學術動態</p>
         </div>
