--- a/FrontEnd/templates/FrontEnd/position/position.html
+++ b/FrontEnd/templates/FrontEnd/position/position.html
@@ -13,7 +13,27 @@
     <div class="container-1">
         <p >位置</p>
     </div>
-    <div class="contenttext-0">
+    <hr class="wire">
+
+    <div class="content-row">
+        <div class="contenttext-1">
+            雲科平面地圖：
+            <img src="../../../../static/img/position/yuntech_map.png" class="img">
+        </div>
+    
+        <div class="contenttext-1">
+        google地圖：
+            <img src="../../../../static/img/position/yuntech_map2.png" class="img">
+        </div>
+        </div>
+    
+        <div class="contenttext-0">
+            <div class="positiontext"><img src="../../../../static/img/position/map-pin.png" class="iimg">　位置 : 雲林縣斗六市大學路三段123號</div>
+            <div class="positiontext"><img src="../../../../static/img/position/locate-fixed.png" class="iimg" >　教室位置 : A101</div>
+        </div>
+    
+    
+    <!--div class="contenttext-0">
         <img src="../../../../static/img/position/map-pin.png" width="40px" height="40px">　位置 : 雲林縣斗六市大學路三段123號
     </div>
     <div class="contenttext-0">
@@ -24,8 +44,8 @@
         <img src="../../../../static/img/position/yuntech_map.png" width="555px" height="561px" class="img">
     <div class="contenttext-1">
         google地圖：<p></div>
-        <img src="../../../../static/img/position/yuntech_map2.png" width="618px" height="358px" class="img">
+        <img src="../../../../static/img/position/yuntech_map2.png" width="618px" height="358px" class="img"-->
     
-</section>>
+</section>
 
 {% endblock %}
