--- a/static/css/base_single/base_single.css
+++ b/static/css/base_single/base_single.css
@@ -7,13 +7,13 @@
 
 .wire {
     position: relative;
-    width: 72%;
+    width: 75%;
     border: 2px solid #000000;
 }
 
 .title-1 {
     width: 74%;
-    font-size: 48px;
+    font-size: 36px;
     line-height: 56px;
     display: flex;
     margin: 90px auto 30px;
@@ -21,10 +21,16 @@
     text-align: center;
 }
 
-.content-1{
-    font-size: 20px;
+.txttt{
+    margin-top: 150px;
+    margin-left: 59%;
+}
+
+.content-1{   
+    text-align: justify;
+    font-size: 18px;
     margin: 70px auto;
-    width: 75%;
+    width: 73.5%;
 }
 
 .second-title {
@@ -43,9 +49,11 @@
     /*display: flex;  align-items: center; */
 }
 
-img {
+.img {
     display: block;
     margin: auto;
+    /*width: 100% !important;
+    height: 100% !important;*/
 }
 
 .table {
@@ -53,20 +61,27 @@ img {
 }
 @media (max-width: 1280px) {
     .title-1 {
-        font-size: 40px;
-        line-height: 46px;
+        font-size: 34px;
+        line-height: 44px;
     }
     img{
         width: 65% !important;
+    }
+    .txttt {
+        margin-left: 72%;
     }
 }
 
 @media (max-width: 767px) {
     .title-1 {
         font-size: 34px;
-        line-height: 38spx;
+        line-height: 38px;
     }
     img{
         width: 100% !important;
+        margin-left: 0px !important;
+    }
+    .txttt {
+        margin-left: 0%;
     }
 }
