--- a/static/css/download/download.css
+++ b/static/css/download/download.css
@@ -12,7 +12,7 @@
     border-color: #000000;
     border-collapse: collapse;
     margin: 40px auto 70px;
-    font-size: 1.5rem;
+    font-size: 1.125rem;
     color: #000000;
     width: 100%;
 }
@@ -22,7 +22,7 @@
 
 
 .bg-danger {
-    font-size: 28px;
+    font-size: 24px;
     line-height: 33px;
 }
 
@@ -49,7 +49,7 @@
 .rightspace {
     float: left;
     position: absolute;
-    font-size: 20px;
+    font-size: 18px;
     line-height: 23px;
     color: #000000;
     text-align: left;
@@ -148,7 +148,7 @@
 @media (max-width:1172px) {
     .rightspace {
         float: left;
-        margin-left: 0px;
+        margin-left: -15%;
         margin-right: 10px;
         margin-bottom: 5px;
     }
@@ -186,7 +186,7 @@
 }
 @media (max-width: 1280px) {
     .bg-danger {
-        font-size: 24px;
+        font-size: 20px;
         line-height: 27px;
     }
     .bg-danger-1{
@@ -195,7 +195,7 @@
     }
     .rightspace {
         font-size: 18px;
-        margin-left: -15px;
+        /*margin-left: -15px;*/
     }
     .searchbox {
         margin-right: -10%;
@@ -217,7 +217,7 @@
 
 @media (max-width: 767px) {
     .bg-danger {
-        font-size: 20px;
+        font-size: 18px;
         line-height: 23px;
     }
     .bg-danger-1{
