--- a/static/css/members_intro/members_intro.css
+++ b/static/css/members_intro/members_intro.css
@@ -4,15 +4,18 @@
     width: 65%;
     margin: auto;
 }
-
+.wire {
+    position: relative;
+    width: 80%;
+    border: 1.5px solid #000000;
+    margin-bottom: 40px;
+}
 .title-1 {
-    font-size: 48px;
-    line-height: 56px;
-    display: flex;
-    margin: 90px auto 50px;
-    align-items: center;
-    text-align: center;
-    justify-content: center;
+    width: 78%;
+    font-size: 36px;
+    line-height: 46px;
+    margin: 90px auto 30px;
+    text-align: left;
     text-shadow: 1px 1px 0.5px rgba(106, 106, 106, 0.67);
 }
 
@@ -53,25 +56,51 @@
     top: 20%;
 }
 
-@media (max-width:1460px) {
-    .type-1{
-        display: none;
+.coursephoto {
+    width: 176px;
+    height: auto;
+    float: left;
+    background-color: #ffffff ;
+    margin-right: 8px;
+}
+.box {
+    cursor: pointer;
+    width: 38%;
+    margin-left: 22px;
+    margin-right: 22px;
+    margin-bottom: 26px;
+    padding: auto;
+    background-color: #7dc3c2;
+    border: 3px solid #7dc3c2;
+    height: fit-content;
+}
+.content-00 {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    font-size: 18px;
+}
+.boxcontent {
+    display: block;
+    margin-top: 4%;
+}
+
+
+@media (max-width:1650px) {
+    .box {
+        width: 40%;
     }
 
 }
-@media (max-width:1320px) {
-    .type-2{
-        display: none;
+@media (max-width:1540px) {
+    .box {
+        height: fit-content;
     }
-
-}
-@media (max-width:915px) {
-    .type-3{
-        width: 13%;
+    .boxcontent {
+        word-break: break-all;
+        padding: 3px;
     }
-
 }
-
 
 @media (max-width: 1280px) {
     .bg-danger {
@@ -83,8 +112,8 @@
         line-height: 24px;
     }
     .title-1 {
-        font-size: 40px;
-        line-height: 46px;
+        font-size: 34px;
+        line-height: 44px;
     }
     .searchbox {
         margin-right: -13%;
@@ -114,5 +143,23 @@
     .searchbox {
         width: 40%;
         margin-right: 0%;
+    }
+}
+
+@media (max-width: 721px) {
+    .box {
+        height: fit-content;
+        width: 182px;
+    }
+    .coursephoto {
+        margin-right: 0px;
+    }
+}
+
+@media (max-width: 450px) {
+
+    .boxcontent {
+        word-break: break-all;
+        padding: 3px;
     }
 }
