--- a/static/css/position/position.css
+++ b/static/css/position/position.css
@@ -1,72 +1,113 @@
-.context-1 {
+.content-1 {
     font-family: Roboto;
     font-style: normal;
-
+    width: 65%;
+    margin: auto;
+}
+.wire {
+    position: relative;
+    width: 80%;
+    border: 1.5px solid #000000;
 }
 
 .container-1 {
-    display: flex;
-    align-items: center;
+    width: 76%;
     font-size: 36px;
-    line-height: 42px;
-    margin: auto;
-    width: 80%;
-    /*flex-flow: row wrap;*/
-    justify-content: center;
-    line-height: 56px;
-    font-size: 48px;
-    padding-top: 85px;
-    padding-bottom: 90px;
+    line-height: 46px;
+    display: flex;
+    margin: 90px auto 30px;
     text-shadow: 1px 1px 0.5px rgba(106, 106, 106, 0.67);
 }
 
 .contenttext-0 {
     display: flex;
     align-items: center;
-    font-size: 36px;
-    line-height: 42px;
+    font-size: 24px;
+    line-height: 30px;
     margin: auto;
-    width: 80%;
-    padding: auto;
-    height: 70px;
+    width: 85%;
     text-shadow: 1px 1px 0.5px rgba(106, 106, 106, 0.67);
+    margin-left: 8%;
+    margin-bottom: 4%;
 }
 
 .contenttext-1 {
     display: flex;
-    font-size: 36px;
+    font-size: 30px;
     line-height: 42px;
-    margin: 100px auto 30px auto;
-    width: 80%;
+    margin: 50px auto 30px auto;
     text-shadow: 1px 1px 0.5px rgba(106, 106, 106, 0.67);
+    flex-direction: column;
+}
+.content-row {
+    display: flex;
+    flex-direction: row;
+    width: 85%;
+    margin-left: 10%;
 }
 
 .img {
     display: block;
-    margin: 30px auto;
+    margin: 20px 0px;
+    width: 90%;
+    text-align: left;
 }
-@media (max-width: 1280px) {
+.img-2 {
+    display: flex;
+
+    justify-content: center;
+}
+.iimg {
+    width: 35px;
+    height: 35px;
+}
+.positiontext {
+    margin: auto;
+    
+}
+
+
+
+@media (max-width: 1360px) {
     .contenttext-0 {
-        font-size: 30px;
-        line-height: 33px;
+        font-size: 20px;
+        line-height: 28px;
+    }
+    .iimg {
+        width: 30px;
+        height: 30px;
     }
     .contenttext-1{
-        font-size: 30px;
+        font-size: 26px;
         line-height: 33px;
     }
     .container-1 {
-        font-size: 40px;
-        line-height: 46px;
+        font-size: 34px;
+        line-height: 44px;
     }
+}
+
+@media (max-width: 1140px) {
+    .contenttext-0 {
+        display: block;
+    }
+    
+}
+
+@media (max-width: 991px) {
+    .content-row {
+        display: block !important;
+    }
+    
 }
 
 @media (max-width: 850px) {
     .contenttext-0 {
-        font-size: 24px;
-        line-height: 28px;
+        font-size: 16px;
+        line-height: 24px;
     }
     .contenttext-1{
-        font-size: 24px;
+        font-size: 22px;
         line-height: 28px;
     }
     .container-1 {
